--- a/assignment3/public/css/style.css
+++ b/assignment3/public/css/style.css
@@ -1,1 +1,63 @@
 
+/*----------Header----------*/
+header {
+	width: 100%;
+	background-color: #e7fbfe;
+	float: left;
+}
+header a:hover {
+	color: #696a6b;
+	background-color: inherit;
+	display: inline;
+}
+
+.logo {
+    text-decoration: none;
+    font-size: 2.5em;
+    color: #696a6b;
+    line-height: 70px;
+    margin-left: 10px;
+}
+
+/*----------Navigasjon----------*/
+
+nav {
+	text-align: center;
+	float: right;
+}
+
+	nav ul {
+		list-style: none;
+		position: relative;
+		display: inline-table;
+	}
+
+		nav ul li {float: left;}
+
+			nav ul li:hover {background-color: #ccf7fe;}
+
+			nav ul li a:link, nav ul li a:visited {
+				display: block;
+				text-align: center;
+				padding: 17px 20px;
+				margin: 0;
+				text-decoration: none;
+				font-size: 1.55em;
+                color: #696a6b;
+			}
+
+			li.dropdown {display: inline-block;}
+
+			.dropdown-content {
+			    display: none;
+			    position: absolute;
+			    background-color: #e7fbfe;
+			    min-width: 160px;
+				width: 221px;
+			    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+				z-index: 100;
+			}
+
+				.dropdown-content a:hover {background-color: #ccf7fe;}
+
+			.dropdown:hover .dropdown-content {display: block;}
